# cloud-native-ai-lab

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  PROJECT_STATE.md  README.md  checklist.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: test.yml
docs/: landscape-report.md  talk-outline.md
docs/projects/: aaif.md  dra.md  gateway-api-inference.md  jobset.md  kagent.md  knative.md  kserve.md  kueue.md  leaderworkerset.md  llm-d.md  mcp.md
labs/00-setup/: README.md  kind-cluster.yaml  setup.sh  teardown.sh  verify.sh
labs/01-kueue-basics/: README.md
labs/01-kueue-basics/manifests/: cluster-queue-a.yaml  cluster-queue-b.yaml  local-queue-a.yaml  local-queue-b.yaml  priority-classes.yaml  priority-job.yaml  resource-flavor.yaml  sample-job-b.yaml  sample-job.yaml
labs/02-dra-resource-claims/: README.md
labs/02-dra-resource-claims/manifests/: device-class.yaml  pod-with-claim.yaml  resource-claim-template.yaml  resource-claim.yaml
labs/03-jobset-training/: README.md
labs/03-jobset-training/manifests/: jobset-simple.yaml  jobset-with-kueue.yaml
labs/04-kserve-inference/: README.md
labs/04-kserve-inference/manifests/: inference-service.yaml
labs/05-gateway-routing/: README.md
labs/05-gateway-routing/manifests/: gateway.yaml  inference-objective.yaml  inference-pool.yaml
labs/06-kagent-mcp/: README.md
labs/06-kagent-mcp/manifests/: agent.yaml  mcp-server.yaml
scripts/: test.sh
tests/: conftest.py  validate_factchecks.py  validate_links.py  validate_markdown.py  validate_structure.py  validate_yaml.py
(+6 files in other folders)
